--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${DB_URL:jdbc:mysql://localhost:3306/security_app_prod?useSSL=true&requireSSL=true&serverTimezone=UTC}
+    url: ${DB_URL:jdbc:mysql://localhost:3306/tolly_db?useSSL=true&requireSSL=true&serverTimezone=UTC}
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
@@ -42,8 +42,7 @@ logging:
     org.hibernate.SQL: WARN
     org.hibernate.type.descriptor.sql.BasicBinder: WARN
   file:
-    name: ${LOG_FILE_PATH:/var/log/tolly
-/application.log}
+    name: ${LOG_FILE_PATH:/var/log/tolly/application.log}
   pattern:
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
@@ -53,9 +52,11 @@ jwt:
   access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:900000}
   refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:604800000}
 
+
 server:
   port: ${SERVER_PORT:8080}
-  error:
+  
+error:
     include-stacktrace: never
     include-message: on_param
     include-binding-errors: on_param
