--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             <version>3.0.0</version>
         </dependency>
 
+        <!-- PDF generation -->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.39</version>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
