chore: enable hibernate ddl-auto update

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   
   jpa:
     hibernate:
-      ddl-auto: validate  # En producción usar 'validate' o 'none'
+      ddl-auto: update  # En producción usar 'validate' o 'none'
     show-sql: false
     properties:
       hibernate:
